<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juan.actividad_android.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:id="@+id/lblBienvenido"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/accent_material_light"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivLogo"
        android:layout_toRightOf="@+id/ivLogo"
        android:layout_toEndOf="@+id/ivLogo"
        android:layout_alignTop="@+id/ivLogo">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:id="@+id/lblUsuario" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsuario"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/lblPassword" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassword"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btnentrar"
        android:id="@+id/btnEntrar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:onClick="oyente_btnEntrar"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivLogo"
        android:src="@drawable/medico"
        android:layout_above="@+id/btnEntrar"
        android:layout_toLeftOf="@+id/lblBienvenido"
        android:layout_toStartOf="@+id/lblBienvenido" />

</LinearLayout>
